{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 45,
  "lineage": "d57d2ba0-8227-3550-d487-fd1d91d69db8",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "name": "zgebs-wb-dey-snet-apim-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "name": "zgebs-wb-dev-snet-shared-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "name": "zgebs-wb-dev-snet-webin-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "name": "zgebs-wb-dev-snet-webout-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e4f01380-6706-4d97-a6bc-681612d54b82",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}